fixed wrong alignment of validation error list items

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -84,3 +84,7 @@ table.form-table {
 .field-label {
     font-weight: 900;
 }
+
+.ccd-error-summary-li {
+  margin-left: 40px;
+}
